--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       </nav>
       <div class="container">
         <div class="row">
+          <h1>Introducción</h1>
           <div class="col-md-6 cuadrilla border">
             <p>Claro, aquí tienes una introducción más larga para el texto:</p>
             <p>La naturaleza, en su infinita diversidad y majestuosidad, siempre ha sido fuente de asombro y maravilla para la humanidad a lo largo de la historia. Desde el amanecer de la civilización, hemos buscado respuestas en los cielos estrellados, hemos encontrado consuelo en la brisa de la montaña y hemos hallado inspiración en los misterios de los bosques profundos. La relación entre el ser humano y el entorno natural es una parte intrínseca de nuestra existencia, un vínculo que se ha tejido en los tejidos de nuestra cultura, religión y arte.</p>
@@ -46,6 +47,7 @@
   
         <div class="row">
           <div class="col-md-6 cuadrilla border">
+            <p>Lorem ipsum dolor sit amet</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           
           </div>
@@ -58,7 +60,7 @@
   
       <div class="container">
         <div id="secSecundaria">
-          <h1>Segunda seccion</h1>
+          <h1>Desarrollo</h1>
           <div class="row">
             <div class="col-md-6 cuadrilla border">
               <p>Lorem ipsum dolor sit amet</p>
@@ -79,7 +81,7 @@
             <img src="img4.jpg" alt="img4" id="img4" class="img-fluid">
           </div>
         <div id="secTerciaria">
-          <h1>Tercer seccion</h1>
+          <h1>Conclusiones</h1>
         <div class="row">
           <div class="col-md-6 cuadrilla border">
             <p>Lorem ipsum dolor sit amet</p>
